--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -67,6 +67,8 @@ Seb wrote the [survey conclusion](https://2024.stateofreact.com/en-US/conclusion
 - 📜 [What Do We Do with You, Old React?](https://www.manuelsanchezdev.com/blog/what-to-do-with-old-react-upgrading-to-modern-react): Tips on upgrading codebases that still use class components and “old” Redux.
 - 📜 [We Replaced Our React Frontend with Go and WebAssembly](https://dagger.io/blog/replaced-react-with-go): They explain why this was the right choice for them, but probably don’t do this at home.
 - 📜 [Handling Relationships in React Admin](https://marmelab.com/blog/2025/02/06/handling-relationships-in-react-admin.html): The included components (`<ReferenceField>` and its friends) usually do what you need, but this also explains how to build custom ones.
+- 📜 [Create React App Officially Deprecated Amid React 19 Compatibility Issues](https://socket.dev/blog/create-react-app-officially-deprecated?utm_medium=feed): If you’ve not heard about this, catch up with this recap.
+- 📜 [How to start a React Project in 2025](https://www.robinwieruch.de/react-starter/)
 - 📜 [Master Redux Action Best Practices & Make Debugging Easy](https://janhesters.com/blog/master-redux-action-best-practices-and-make-debugging-easy)
 - 📦 [React Hook Form resolvers 4.0](https://github.com/react-hook-form/resolvers/releases/tag/v4.0.0): Adds a [standard-schema](https://github.com/standard-schema/standard-schema) resolver, so you can switch easily between validation libraries that conform to the standard-schema specification.
 - 📦 [Base UI v1.0.0 alpha 6](https://github.com/mui/base-ui/releases/tag/v1.0.0-alpha.6): This eagerly awaited collection of unstyled components is making its way through the alpha phase
