--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /221
-title: "This Week In React #221: State of React, React Router, Rsbuild, ProseMirror, Redux, React Hook Form, Base UI, RSC, React Admin | AI & RN, Strict DOM, Polygen, Ignite, New Arch, Radon, macOS, Universal RSC, Gesture Handler | TypeScript, Prettier, esbuild..."
+title: "This Week In React #221: State of React, React Router, Rsbuild, ProseMirror, Redux, React Hook Form, Base UI, RSC, React Admin | AI & RN, Expo, Strict DOM, Polygen, Ignite, New Arch, Radon, macOS, Universal RSC, Gesture Handler | TypeScript, Prettier, esbuild..."
 authors: [cyrilbo, matthieugicquel]
 date: 02-12-2025
 ---
