--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -29,11 +29,11 @@ import Support from "../_support.mdx";
 
 When you wake up in the morning how many different yaml files do you want to manage? With EAS Workflows, you have **everything in one place**.
 
-• Automate builds
-• Run e2e tests
-• Send previews
-• Submit to stores
-• GitHub triggers, lint checks, slack notifications...so much more
+- Automate builds
+- Run e2e tests
+- Send previews
+- Submit to stores
+- GitHub triggers, lint checks, slack notifications...so much more
 
 With EAS Workflows you can **automate and sequence** all your builds/updates/submissions. Package up all the commands in a workflow and go drink a coffee. You deserve it.
 
