--- a/website/newsletter/222/index.mdx
+++ b/website/newsletter/222/index.mdx
@@ -26,20 +26,15 @@ import Support from "../_support.mdx";
 
 **[PropelAuth: Make Authentication Your Advantage](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrfeb192024)**
 
-If your authentication isn't **helping you grow**, it's **holding you back**.  
-  
+If your authentication isn't **helping you grow**, it's **holding you back**.
+
 With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024), you get everything you need to launch and scale your B2B product:
 
-*   **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024) and **friendly, fast support**.
-    
-*   **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
-    
-*   **User impersonation** so you can provide top-notch support to your users.
-    
-*   **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
-    
-*   **User insights** to help you strategize and expand.
-    
+- **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024) and **friendly, fast support**.
+- **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
+- **User impersonation** so you can provide top-notch support to your users.
+- **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
+- **User insights** to help you strategize and expand.
 
 [Get started today](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024)
 
@@ -65,16 +60,11 @@ Reactile is an UI/UX turnkey framework which features an out-of-the-box, intuiti
 
 On top of that, Reactile also offers:
 
-*   A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
-    
-*   The possibility to use nested tabs for your tiles.
-    
-*   A simplified global search mechanism.
-    
-*   CSS @container based responsiveness.
-    
-*   And much more.
-    
+- A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
+- The possibility to use nested tabs for your tiles.
+- A simplified global search mechanism.
+- CSS @container based responsiveness.
+- And much more.
 
 Version 2 coming out soon. Get started with your unique 30-day free trial. Learn more about it on reactile.net.
 
@@ -84,9 +74,38 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[React Native 0.78 \- React 19 and more](https://reactnative.dev/blog/2025/02/19/react-native-0.78)
+
+I bet you weren't expecting a React Native release so soon, but the team recently decided to releases smaller versions more frequently. Here are the highlights:
+
+- React 19 support\!
+- Simplified process to enable the React Compiler.
+- Metro log streaming is back in 0.78 and 0.77.1, but opt-in with a new `--client-logs` flag, and still deprecated.
+- `<Image>` supports Android XML resources, unlocking possible perf improvements.
+- `ReactNativeFactory` on iOS to ease brownfield usage in any ViewController
+
+React 19 unlocks many cool things, including:
+
+- Actions (async transitions), `useActionState()`, `useOptimistic()`, all useful to submit forms and manage loading, error, and optimistic state
+- Use `ref` as a regular prop instead of `forwardRef()`, also supporting a ref cleanup function
+- Use `<Context>` instead of `<Context.Provider>`
+- Read contexts and promises with `use()`
+
+---
 
 - 💸 [Codemagic - a great App Center alternative for React Native devs! 8x faster builds, CodePush, automated distribution. 1-month free trial!](https://codemagic.io/migration-from-app-center/?utm_source=newsletter&utm_medium=email&utm_campaign=app_center_this_week_react)
+- 📣 [Expo support for React Native 0.78](https://expo.dev/changelog/react-native-78): Due to the React 19 upgrade, v0.78 will not be supported in SDK52, but will be in the canary version. SDK 53 is scheduled for this spring and will likely upgrade directly to 0.79.
+- 👀 [Gradle Plugin PR \- Add option to disable bundle compression](https://github.com/facebook/react-native/pull/49449): Marc Rousavy proposing a `react.enableBundleCompression=true` property. Turning it off could greatly optimize Android app startup time, but increases the app install size.
+- 💬 [Making the JitPack Repository optional](https://github.com/react-native-community/discussions-and-proposals/discussions/877): Android apps With v0.78, Android apps have a new `react.includeJitpackRepository=true` Gradle property. Turning it off could improve supply chain security, and may become the default in the future.
+- 📜 [Checkbox Interactions \- The beauty of Layout Animations](https://reactiive.io/articles/checkbox-interactions)
+- 📜 [Universal App with Expo](https://www.premieroctet.com/blog/en/universal-app-with-expo)
+- 📦 [Create React Native Library 0.48 \- Support for Nitro modules](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.48.0)
+- 📦 [React Native Screens 4.7 \- Fix Android formSheet transition](https://github.com/software-mansion/react-native-screens/releases/tag/4.7.0)
+- 📦 [Expo AI Chatbot \- Starter to build a universal Expo \+ Next.js chatbot with premium option](https://www.expoaichatbot.com/)
+- 🎥 [Expo \- EAS Workflows: React Native CI/CD for app developers](https://www.youtube.com/watch?v=OJ2u9tQCpr4)
+- 🎥 [Catalin Miron \- Apple Invites animation](https://www.youtube.com/watch?v=P_gYeiFipsk)
+- 🎥 [Simon Grimm \- The Fastest Way to Build a Mobile App (AI \+ Expo \= Magic)](https://www.youtube.com/watch?v=fJb6f2Sw4Ek)
+- 🎙️ [React Universe On Air 48 \- Reanimated 4 is the Future of Smooth React Native Animations](https://www.youtube.com/watch?v=wAfJqFX62ag)
 
 ---
 
