--- a/website/newsletter/222/index.mdx
+++ b/website/newsletter/222/index.mdx
@@ -108,7 +108,9 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 
 ## 📱 React-Native {#react-native}
 
-[React Native 0.78 \- React 19 and more](https://reactnative.dev/blog/2025/02/19/react-native-0.78)
+[![React Native 0.78 - React 19 and more](/emails/issues/222/rn.jpg)](https://reactnative.dev/blog/2025/02/19/react-native-0.78)
+
+**[React Native 0.78 \- React 19 and more](https://reactnative.dev/blog/2025/02/19/react-native-0.78)**
 
 I bet you weren't expecting a React Native release so soon, but the team recently decided to releases smaller versions more frequently. Here are the highlights:
 
@@ -157,8 +159,6 @@ React 19 unlocks many cool things, including:
 - 📦 [Deno 2.2 \- OpenTelemetry, Lint Plugins, `node:sqlite`](https://deno.com/blog/v2.2)
 
 ## 🤭 Fun {#fun}
-
-<Todo />
 
 [![alt](/emails/issues/222/meme.jpg)](https://bsky.app/profile/sebastienlorber.com/post/3lifbkotlfc2v)
 
