--- a/website/newsletter/222/index.mdx
+++ b/website/newsletter/222/index.mdx
@@ -55,6 +55,7 @@ Related news:
 
 - 📜 [Use a framework to build React Native apps](https://reactnative.dev/blog/2024/06/25/use-a-framework-to-build-react-native-apps): A few months ago, the React Native team made a similar announcement, claiming “you’re either using a framework or you’re building your own framework”.
 - 📦 [Create TanStack Router App](https://github.com/TanStack/create-tsrouter-app): Jack Herrington’s first contribution to the TanStack is an alternative to Create-React-App, also introduced it in a [video](https://www.youtube.com/watch?v=10J6RyMOxN0)
+- 📦 [CRA to Parcel](https://github.com/parcel-bundler/cra-to-parcel): A script to migrate a non-ejected Create React App to Parcel
 
 ---
 
@@ -71,9 +72,9 @@ Related news:
 - 📜 [React Libraries for 2025](https://www.robinwieruch.de/react-libraries/)
 - 📜 [Tanstack Start \- Is it the Next NextJS?](https://spin.atomicobject.com/tanstack-start-nextjs/)
 - 📦 [React Router 7.2 \- Type-safe `href()` utility](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v720): A welcome improvement giving route path autocompletion and params validation. This release also include support for an SPA fallback static file, and 2 new future flags `unstable_splitRouteModules` and `unstable_viteEnvironmentApi`.
-- 📦 [Preact 10.26 \- Support for React 19 `<Context>`](https://github.com/preactjs/preact/releases/tag/10.26.0)
 - 📦 [TanStack Start 1.107 \- AbortSignal for server functions](https://tanstack.com/start/latest/docs/framework/react/server-functions#cancellation)
 - 📦 [Astro 5.3 \- Faster SSR, automatic session storage setup](https://astro.build/blog/astro-530/)
+- 📦 [Preact 10.26 \- Support for React 19 `<Context>`](https://github.com/preactjs/preact/releases/tag/10.26.0)
 - 📦 [9ui \- Beautiful, customizable components built with Base UI and Tailwind CSS](https://www.9ui.dev/): Using the shadcn distribution model but using Base UI, a new interesting alternative to Radix. The author is also porting popular libs such as Vaul and cmdk.
 - 📦 [Kokonut UI \- Collection of components built for Next.js and React with Tailwind CSS](https://kokonutui.com/): Another option using the shadcn distribution model.
 - 📦 [React Bits \- Collection of animated, interactive & fully customizable React components for building stunning, memorable user interfaces](https://github.com/DavidHDev/react-bits)
