--- a/website/newsletter/222/index.mdx
+++ b/website/newsletter/222/index.mdx
@@ -1,19 +1,17 @@
 ---
 slug: /222
-title: "This Week In React #222: ..."
+title: "This Week In React #222: CRA, React Router, captureOwnerStack, CTRA, TanStack, Astro, Preact | RN 0.78, React 19, Expo, noCompress, JitPack, CRNL, Screens | TC39, Interop, TS, CSS, Node.js, Deno"
 authors: [slorber]
 date: 02-19-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-Intro RN Connection?
+This week we have 2 official blog posts from the React and React Native core teams! CRA is deprecated and React Native 0.78 is out with React 19 support.
 
-Birthday
-https://x.com/sebastienlorber/status/1889978041537061021
+🎂 We're also celebrating this newsletter's 5th anniversary! The [first issue](https://substack.thisweekinreact.com/p/react-hebdo-sebastien-lorber-1-20-02-13) went out on February 13th. For the first 2 years it was only in French. I’d love to know who's been reading since the early days—say hi if you have! 😀
 
-🗓️ [React Native Connection](https://reactnativeconnection.io/?utm_source=thisweekinreact) -  🇫🇷 Paris - April 1-2 - 15% discount with code "TWIR". The French React Native conference is back with Britta Evans-Fenton (Shopify), Kadi Kraman (Expo), Krzysztof Piaskowy (Software Mansion), Saad Najmi (Microsoft) and more - and great deep-diving talks!
+Check our partner conf **[React Native Connection](https://reactnativeconnection.io/?utm_source=thisweekinreact)** -  🇫🇷 Paris - April 1-2 - 15% discount with code "TWIR". The French React Native conference is back with Britta Evans-Fenton (Shopify), Kadi Kraman (Expo), Krzysztof Piaskowy (Software Mansion), Saad Najmi (Microsoft) and more - and great deep-diving talks!
 
 <!-- truncate -->
 
@@ -45,7 +43,9 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 
 ## ⚛️ React {#react}
 
-[Sunsetting Create React App](https://react.dev/blog/2025/02/14/sunsetting-create-react-app)
+[![Sunsetting Create React App](/emails/issues/222/cra.jpg)](https://react.dev/blog/2025/02/14/sunsetting-create-react-app)
+
+**[Sunsetting Create React App](https://react.dev/blog/2025/02/14/sunsetting-create-react-app)**
 
 Long overdue, CRA has received the latest React 19 fixes and is now officially deprecated. This article explains the limits of the CRA and build tools regarding routing, waterfalls, code splitting, and more. The React team encourages us to adopt a framework like Next.js, React Router, or Expo to address these issues. However, you can still [build a React app from scratch](https://react.dev/learn/build-a-react-app-from-scratch) using Vite, Parcel, Rsbuild, or other modern build tools.
 
