--- a/website/newsletter/222/index.mdx
+++ b/website/newsletter/222/index.mdx
@@ -121,7 +121,7 @@ I bet you weren't expecting a React Native release so soon, but the team recentl
 - `<Image>` supports Android XML resources, unlocking possible perf improvements.
 - `ReactNativeFactory` on iOS to ease brownfield usage in any ViewController
 
-React 19 unlocks many cool things, including:
+React 19 itself unlocks many cool things:
 
 - Actions (async transitions), `useActionState()`, `useOptimistic()`, all useful to submit forms and manage loading, error, and optimistic state
 - Use `ref` as a regular prop instead of `forwardRef()`, also supporting a ref cleanup function
