Add audience demography from substack

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -125,6 +125,12 @@ Since 2020, he has been **working for Meta** as a freelancer. He is the **lead m
 
 <br />
 
+### 🌍 Demography {#demography}
+
+Our audience is well-balanced, with the largest share in **Europe** (40%) followed by **North America** (18%).
+
+![Substack audience demography stats](/img/audience-demography.png)
+
 ### 📈 Stats {#stats}
 
 <SponsoringTabsStats>
