--- a/website/newsletter/223/index.mdx
+++ b/website/newsletter/223/index.mdx
@@ -8,6 +8,10 @@ unlisted: true
 
 Hi everyone!
 
+🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. CFP is closing soon on March 2! Last chance to submit your talks for a top-tier tech audience.
+
+🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) -  🇵🇱 Kraków - 28-30 May. Don't miss your chance to grab your tickets and benefit from an exclusive 15% discount using the code "TWIR".
+
 <Todo />
 
 <!-- truncate -->
@@ -26,14 +30,10 @@ import Support from "../_support.mdx";
 
 [React-admin](https://marmelab.com/react-admin/?ref=TWIR) is the go-to framework for building B2B apps—because let’s be real, nobody dreams of writing yet another CRUD screen. Here’s why thousands of developers swear by it:
 
-*   🔌 **Backend Agnostic:** Connects to any API—because commitment issues aren't just for relationships.
-    
-*   🧩 **200+ Building Blocks:** More pre-built components than your project has TODOs.
-    
-*   🛠 **Complete Customization:** If you don’t like it, change it. We won’t take it personally (\*wipes away tears\*).
-    
-*   💻 **Great Developer Experience:** Makes you feel like a coding rockstar, minus the groupies (unless you count rubber ducks).
-    
+- 🔌 **Backend Agnostic:** Connects to any API—because commitment issues aren't just for relationships.
+- 🧩 **200+ Building Blocks:** More pre-built components than your project has TODOs.
+- 🛠 **Complete Customization:** If you don’t like it, change it. We won’t take it personally (\*wipes away tears\*).
+- 💻 **Great Developer Experience:** Makes you feel like a coding rockstar, minus the groupies (unless you count rubber ducks).
 
 With 7 years in production and 1 million daily users, react-admin is a sure bet. So why don’t you [try it out](https://github.com/marmelab/react-admin?ref=TWIR) yourself?
 
@@ -55,12 +55,12 @@ With 7 years in production and 1 million daily users, react-admin is a sure bet.
 
 **[Tests are dead - Meticulous is here](https://www.meticulous.ai?utm_source=thisweekinreact&utm_campaign=feb26th)**
 
-Meticulous creates and maintains an exhaustive suite of e2e ui tests with **zero** developer effort.   
-  
-Dropbox, Bilt Rewards, Lattice and hundreds of engineering organizations rely on Meticulous for their frontend testing.  
-  
-This quote from the CTO of Traba sums the product up best: "Meticulous has fundamentally changed the way we approach frontend testing in our web applications, fully eliminating the need to write any frontend tests. The software gives us confidence that every change will be completely regression tested, allowing us to ship more quickly with significantly fewer bugs in our code."  
-  
+Meticulous creates and maintains an exhaustive suite of e2e ui tests with **zero** developer effort. 
+
+Dropbox, Bilt Rewards, Lattice and hundreds of engineering organizations rely on Meticulous for their frontend testing.
+
+This quote from the CTO of Traba sums the product up best: "Meticulous has fundamentally changed the way we approach frontend testing in our web applications, fully eliminating the need to write any frontend tests. The software gives us confidence that every change will be completely regression tested, allowing us to ship more quickly with significantly fewer bugs in our code."
+
 This [post](https://www.meticulous.ai/blog/lessons-from-a-decade?utm_source=thisweekinreact&utm_campaign=jan15th) from our CTO, who formerly led a large engineering group at Palantir, sets out the context of why exhaustive testing can double engineering velocity.
 
 ---
