--- a/website/newsletter/223/index.mdx
+++ b/website/newsletter/223/index.mdx
@@ -43,7 +43,7 @@ With 7 years in production and 1 million daily users, react-admin is a sure bet.
 
 <Todo />
 
-- 💸 [Add a collaborative document editor to your app](https://convex.link/0dtC5qE)
+- 💸 [AI coding benchmarks for backends](https://convex.link/thisweekbench)
 
 <SubscribeFormEmbed placement="middle" />
 
